<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TB</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_Message">Enter message</string>
    <string name="send">Send</string>
    <string name="hello">hello</string>
    <string name="edittext">edit text</string>
    <string name="stub">stub</string>
    <string name="rj">RJ</string>

    <string-array name="ListViewArray">
        <item> Planet </item>
        <item> Earth </item>
        <item> Is </item>
        <item> AMAZING </item>
    </string-array>

    <string name="imageView"> ImageViewForGridView </string>
    <string name="hello_blank_fragment"> Hello blank fragment </string>
    <string name="title_activity_tb2"> TB2 </string>
    <string name="action_settings"> Settings </string>
    <string name="checkedTextView"> Check </string>
    <string name="fragment2"> Fragment2 </string>
    <string name="fragActivity"> ACTIVITY 2 </string>
    
    <string name="item1"> MenuItem1 </string>
	<string name="item2"> MenuItem2 </string>
	<string name="item3"> MenuItem3 </string>
	<string name="item4"> MenuItem4 </string>
	<string name="item5"> MenuItem5 </string>
	<string name="item6"> MenuItem6 </string>
	
</resources>
